--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "babel-runtime": "6.26.0",
     "body-parser": "^1.18.2",
     "bootstrap": "^3.3.7",
+    "browser-cookies": "^1.1.0",
     "case-sensitive-paths-webpack-plugin": "2.1.1",
     "chalk": "1.1.3",
     "cookie-parser": "^1.4.3",
