--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "postcss-loader": "2.0.8",
     "promise": "8.0.1",
     "raf": "3.4.0",
+    "rc-queue-anim": "^1.4.0",
     "react": "^16.0.0",
     "react-dev-utils": "^4.2.0",
     "react-dom": "^16.0.0",
