--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "react-router-dom": "^4.2.2",
     "react-thunk": "^1.0.0",
     "redux": "^3.7.2",
+    "redux-devtools-extension": "^2.13.2",
     "redux-thunk": "^2.2.0",
     "socket.io": "^2.0.4",
     "socket.io-client": "^2.0.4",
