--- a/package.json
+++ b/package.json
@@ -63,7 +63,8 @@
   "scripts": {
     "start": "node scripts/start.js",
     "build": "node scripts/build.js",
-    "test": "node scripts/test.js --env=jsdom"
+    "test": "node scripts/test.js --env=jsdom",
+    "server": "nodemon server/server.js"
   },
   "jest": {
     "collectCoverageFrom": [
@@ -102,6 +103,10 @@
   "babel": {
     "presets": [
       "react-app"
+    ],
+    "plugins": [
+      ["import", { "libraryName": "antd-mobile", "style": "css" }],
+      ["transform-decorators-legacy", "transform-class-properties"]
     ]
   },
   "eslintConfig": {
