--- a/package.json
+++ b/package.json
@@ -67,8 +67,8 @@
     "start": "node scripts/start.js",
     "build": "node scripts/build.js",
     "test": "node scripts/test.js --env=jsdom",
-    "server": "set NODE_ENV=test&& nodemon --exec babel-node server/server.js",
-    "server_bak": "nodemon server/server.js"
+    "server_render": "set NODE_ENV=test&& nodemon --exec babel-node server/server.render.js",
+    "server": "nodemon server/server.js"
   },
   "jest": {
     "collectCoverageFrom": [
